--- a/sites/spanish/index.html
+++ b/sites/spanish/index.html
@@ -7,28 +7,19 @@
 </head>
 <body>
 
-  <!-- 1 . Embed the widget -->
-  <elevenlabs-convai
-    agent-id="agent_01jz3qjsftfrt8jhzg64bmfdrz">
-  </elevenlabs-convai>
+  <elevenlabs-convai agent-id="agent_01jz3qjsftfrt8jhzg64bmfdrz"></elevenlabs-convai>
 
-  <!-- 2 . Load the widget SDK -->
-  <script src="https://unpkg.com/@elevenlabs/convai-widget-embed" async></script>
-
-  <!-- 3 . Register the client-side tool before the first call -->
   <script>
     document.addEventListener('DOMContentLoaded', () => {
       const widget = document.querySelector('elevenlabs-convai');
       if (!widget) return;
 
-      /* grab URL params once */
       const qs        = new URLSearchParams(window.location.search);
       const email     = qs.get('email')      || '';
       const firstName = qs.get('first_name') || '';
       const lastName  = qs.get('last_name')  || '';
 
-      widget.addEventListener('elevenlabs-convai:call', (event) => {
-        // client-side tool
+      widget.addEventListener('elevenlabs-convai:call', event => {
         event.detail.config.clientTools = {
           PAUSE_5_Second: async () => {
             try {
@@ -37,13 +28,12 @@
             } catch (err) {
               console.error('Pause endpoint failed:', err);
             }
-            return {};          // must return an object (can be empty)
+            return {};
           }
         };
 
-        /* inject metadata so it travels with the session */
         event.detail.config.conversationMetadata = {
-          email:      email,
+          email,
           first_name: firstName,
           last_name:  lastName
         };
@@ -51,5 +41,6 @@
     });
   </script>
 
+  <script src="https://unpkg.com/@elevenlabs/convai-widget-embed" defer></script>
 </body>
 </html>
