--- a/sites/spanish/index.html
+++ b/sites/spanish/index.html
@@ -4,51 +4,37 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
   <title>Spanish Speaking Test</title>
+
+  <!-- Make the tool & metadata available BEFORE the SDK loads -->
+  <script>
+    /* 1 – tool map that the SDK will pick up immediately */
+    window.elevenlabsConvaiClientTools = {
+      PAUSE_5_Second: async () => {
+        try {
+          await fetch('https://timeout-ri84.onrender.com/pause', { method: 'POST' });
+          console.log('PAUSE_5_Second invoked');
+        } catch (err) {
+          console.error('Pause endpoint failed:', err);
+        }
+        return {};           // must return an object
+      }
+    };
+
+    /* 2 – metadata (optional) */
+    const qs = new URLSearchParams(window.location.search);
+    window.elevenlabsConvaiConversationMetadata = {
+      email:      qs.get('email')      || '',
+      first_name: qs.get('first_name') || '',
+      last_name:  qs.get('last_name')  || ''
+    };
+  </script>
 </head>
 <body>
 
-  <elevenlabs-convai id="convai" agent-id="agent_01jz3qjsftfrt8jhzg64bmfdrz"></elevenlabs-convai>
+  <!-- Widget -->
+  <elevenlabs-convai agent-id="agent_01jz3qjsftfrt8jhzg64bmfdrz"></elevenlabs-convai>
 
-  <script>
-    document.addEventListener('DOMContentLoaded', () => {
-      console.log('DOMContentLoaded', Date.now());
-
-      const widget = document.getElementById('convai');
-      if (!widget) return;
-
-      // timeline logs
-      widget.addEventListener('elevenlabs-convai:connect', () => {
-        console.log('connect', Date.now());
-      });
-
-      widget.addEventListener('elevenlabs-convai:call', () => {
-        console.log('call', Date.now());
-      });
-
-      // tool + metadata for every call
-      widget.addEventListener('elevenlabs-convai:call', event => {
-        event.detail.config.clientTools = {
-          PAUSE_5_Second: async () => {
-            try {
-              await fetch('https://timeout-ri84.onrender.com/pause', { method: 'POST' });
-              console.log('PAUSE_5_Second invoked');
-            } catch (err) {
-              console.error('Pause endpoint failed:', err);
-            }
-            return {}; // must return an object
-          }
-        };
-
-        const qs = new URLSearchParams(window.location.search);
-        event.detail.config.conversationMetadata = {
-          email:      qs.get('email')      || '',
-          first_name: qs.get('first_name') || '',
-          last_name:  qs.get('last_name')  || ''
-        };
-      });
-    });
-  </script>
-
+  <!-- SDK loads last; it will find the global tool map already set -->
   <script src="https://unpkg.com/@elevenlabs/convai-widget-embed" defer></script>
 </body>
 </html>
